fix slight sidewise scroll on mobile

--- a/style/style.css
+++ b/style/style.css
@@ -101,8 +101,6 @@ main {
     align-items: center;
     grid-template-columns: 1fr 1fr;
     gap: 2rem;
-    width: 100vw;
-    height: 100%;
     font-size: 2rem;
     padding: 3rem;
     place-items: center;
@@ -113,10 +111,6 @@ img {
     margin-left: auto;
     margin-right: auto;
     max-width: 90%;
-}
-
-#smallText {
-    font-size: 1rem;
 }
 
 @media only screen and (max-width: 1000px) {
@@ -178,6 +172,7 @@ img[src="https://s2.coinmarketcap.com/static/img/coins/64x64/20396.png"] {
     padding: 1rem;
     box-shadow: .5rem .5rem .5rem hsl(309, 63%, 20%);
     text-shadow: .1rem .1rem .1rem hsl(309, 63%, 20%);
+    max-width: 90%;
 }
 
 iframe {
